# csca5028-capstone

./: .gitignore  README.md
.circleci/: config.yaml  config.yml  migration-scripts.yml
services/: docker-compose.yaml
services/.devcontainer/: devcontainer.json  docker-compose.yml
services/data-analyzer/: Dockerfile
services/data-analyzer/src/: app.py  pyproject.toml
services/data-analyzer/src/test/: test_app.py
services/data-analyzer/src/utils/: db.py  fixtures.py
services/data-collector/: Dockerfile
services/data-collector/src/: app.py  pyproject.toml
services/data-collector/src/models/: collect_data.py
services/data-collector/src/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/data-collector/src/test/: test_app.py  test_db.py  test_models.py
services/data-collector/src/utils/: db.py
services/flyway/: Dockerfile  V1__create_schema.sql  V2__create_table.sql  V3__create_table.sql  V4__create_table.sql
services/prometheus/: Dockerfile  prometheus.yaml
services/streamlit/: Dockerfile
services/streamlit/src/: app.py  pyproject.toml
services/streamlit/src/utils/: db.py
